fixed some gap issues and used some hover design

--- a/styles/style.css
+++ b/styles/style.css
@@ -53,6 +53,9 @@ body {
     border: 0;
     cursor: pointer;
 }
+.primary-btn:hover, .secondary-btn:hover {
+    background: var(--title-color);
+}
 .secondary-btn {
     padding: 15px 40px;
     border-radius: 48px;
@@ -77,7 +80,8 @@ nav > .logo {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap:10px
+    gap:10px;
+    cursor: pointer;
 }
 .logo img {
     width: 65px;
@@ -92,6 +96,10 @@ nav > .logo {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.menu >ul > li > a:hover {
+    color: #FF42A5;
+    text-decoration: underline;
 }
 .menu  li {
     list-style: none;
@@ -519,6 +527,9 @@ footer > .logo > h3 {
     }
     .online-game-2 {
         flex-direction: column-reverse;
+    }
+    .online-game-2 .big-game-img img {
+        margin-right: 60px;
     }
     .career-img img {
         max-width: 280px;
